--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CrimsonLens | Visual Storytelling & AI Content</title>
+  <title>CrimsonLens | Visual Storytelling & AI Content</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html { font-size:125%; } /* global +25% already in place */
     :root { --burgundy: #e0003c; }
   </style>
 </head>
@@ -14,73 +13,67 @@
 
   <!-- NAVIGATION -->
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
-    <a href="#" class="flex items-center gap-2">
-      <img src="logo.webp" class="w-10 h-10 select-none" alt="Logo" />
-      <span class="text-xl font-semibold select-none">
-        <span class="text-white">Crimson</span>
-        <span class="text-[var(--burgundy)]">Lens</span>
+    <a href="#" class="flex items-center gap-2" aria-label="Homepage">
+      <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
+      <span class="text-xl font-semibold tracking-wide select-none">
+        <span class="text-white">Crimson</span><span class="text-[var(--burgundy)]">Lens</span>
       </span>
     </a>
     <nav class="hidden items-center gap-6 text-sm md:flex">
-      <a href="#services"      class="hover:text-[var(--burgundy)] transition">Services</a>
-      <a href="#testimonials"  class="hover:text-[var(--burgundy)] transition">Testimonials</a>
-      <a href="portfolio.html" class="hover:text-[var(--burgundy)] transition">View Portfolio</a>
+      <a href="#services" class="transition-colors hover:text-[var(--burgundy)]">Services</a>
+      <a href="#testimonials" class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
+      <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
       <a href="#contact"
-         class="book-call ml-8 px-6 py-3 bg-[var(--burgundy)] hover:bg-white hover:text-black rounded-full transition">
+         class="book-call ml-8 px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
         Book&nbsp;a&nbsp;Call
       </a>
     </nav>
   </header>
 
   <!-- HERO -->
-  <section class="relative flex items-center justify-center min-h-screen pt-24 text-center bg-center bg-cover"
-           style="background-image:url('hero_background.webp');">
-    <div class="absolute inset-0 bg-black/70"></div>
+  <section
+    class="relative flex items-center justify-center min-h-screen pt-24 text-center bg-center bg-cover"
+    style="background-image:url('hero_background.webp');"
+  >
+    <div class="absolute inset-0 bg-black/70" aria-hidden="true"></div>
     <div class="relative z-10 max-w-3xl px-6">
-      <!-- +25% via transform scale -->
-      <h1 class="transform scale-125 origin-center mb-3 text-7xl md:text-9xl font-bold leading-tight">
-        Visual Storytelling Meets<br>
+      <h1 class="mb-3 text-7xl font-bold leading-tight md:text-9xl">
+        Visual Storytelling Meets<br>
         <span class="text-[var(--burgundy)]">AI‑Powered Marketing</span>
       </h1>
-      <h2 class="mb-8 text-xl md:text-2xl font-medium text-gray-200">
+      <h2 class="mb-8 text-xl font-medium text-gray-200 md:text-2xl">
         Ignite emotion. Inspire action. Accelerate growth.
       </h2>
       <div class="flex flex-wrap justify-center gap-4">
         <a href="portfolio.html"
            class="px-6 py-3 border border-white rounded-full transition hover:bg-white hover:text-black">
-          View&nbsp;Portfolio
+          View Portfolio
         </a>
         <a href="#contact"
-           class="book-call px-6 py-3 bg-[var(--burgundy)] hover:bg-white hover:text-black rounded-full transition">
-          Book&nbsp;a&nbsp;Call
+           class="book-call px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
+          Book a Call
         </a>
       </div>
     </div>
   </section>
 
-  <!-- ▸ SERVICES ----------------------------------------------------------------------- -->
+  <!-- SERVICES -->
   <section id="services" class="py-24 bg-black">
     <div class="max-w-6xl px-6 mx-auto">
       <h2 class="mb-16 text-3xl font-semibold text-center md:text-4xl">Services</h2>
-
       <div class="grid gap-12 md:grid-cols-3">
-        <!-- Service card -->
         <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
           <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
                style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
           <h3 class="mb-4 text-2xl font-medium">Insight‑Driven Content Strategy</h3>
           <p class="text-gray-300">Deep audience research, keyword mapping and structured content calendars.</p>
         </div>
-
-        <!-- Service card -->
         <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
           <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
                style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
           <h3 class="mb-4 text-2xl font-medium">Photo &amp; Video Production</h3>
           <p class="text-gray-300">High‑impact visuals from concept to final edit—studio, aerial and documentary styles.</p>
         </div>
-
-        <!-- Service card -->
         <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
           <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
                style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
@@ -91,16 +84,12 @@
     </div>
   </section>
 
-  <!-- ▸ TESTIMONIALS with CAROUSEL ----------------------------------------------------- -->
+  <!-- TESTIMONIALS -->
   <section id="testimonials" class="py-24 bg-neutral-900">
     <div class="max-w-6xl px-6 mx-auto">
       <h2 class="mb-12 text-3xl font-semibold text-center md:text-4xl">What Clients Say</h2>
-
-      <!-- slider viewport -->
       <div class="relative overflow-hidden">
         <div id="carousel" class="flex transition-transform duration-700" style="will-change: transform;">
-          
-          <!-- Slide 1 -->
           <div class="flex-shrink-0 w-full px-8">
             <blockquote class="text-center">
               <p class="text-xl italic leading-relaxed md:text-2xl">
@@ -109,117 +98,87 @@
               <footer class="mt-4 text-gray-400">— Adam K., CEO, EN‑CO Software</footer>
             </blockquote>
           </div>
-
-          <!-- Slide 2 -->
           <div class="flex-shrink-0 w-full px-8">
             <blockquote class="text-center">
               <p class="text-xl italic leading-relaxed md:text-2xl">
                 “Their aerial videos went viral and doubled our foot traffic.”
               </p>
-              <footer class="mt-4 text-gray-400">— Istvan P., Director, Aeropark Budapest</footer>
+              <footer class="mt-4 text-gray-400">— István P., Director, Aeropark Budapest</footer>
             </blockquote>
           </div>
-
-          <!-- Slide 3 -->
           <div class="flex-shrink-0 w-full px-8">
             <blockquote class="text-center">
               <p class="text-xl italic leading-relaxed md:text-2xl">
                 “The visuals made our ad campaign look like a million‑euro production.”
               </p>
-              <footer class="mt-4 text-gray-400">— Nora V., Marketing Lead, Sziget Festival</footer>
+              <footer class="mt-4 text-gray-400">— Nóra V., Marketing Lead, Sziget Festival</footer>
             </blockquote>
-          </div>
-
-            <!-- NEW Slide 4 (placeholder) -->
-          <div class="flex-shrink-0 w-full px-8">
-            <blockquote class="text-center">
-              <p class="text-xl italic leading-relaxed md:text-2xl">
-                “Their motion graphics took our product launch from ordinary to unforgettable.”
-              </p>
-              <footer class="mt-4 text-gray-400">— Luca R., Product Manager, TechNova</footer>
-            </blockquote>
-          </div>
-
-          <!-- NEW Slide 5 (placeholder) -->
-          <div class="flex-shrink-0 w-full px-8">
-            <blockquote class="text-center">
-              <p class="text-xl italic leading-relaxed md:text-2xl">
-                “Professional, creative, and lightning‑fast — the ideal content partner.”
-              </p>
-              <footer class="mt-4 text-gray-400">— Marianna S., CMO, VentureWorks</footer>
-            </blockquote>
-          </div>
           </div>
         </div>
-
-      <!-- dots -->
+      </div>
       <div class="flex justify-center gap-2 mt-8">
-      <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
-      <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 2"></button>
-      <button data-slide="2" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 3"></button>
-      <button data-slide="3" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 4"></button>
-      <button data-slide="4" class="dot w-3 h-3 rounded-full bg-gray-500"         aria-label="Slide 5"></button>
-    </div>
+        <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
+        <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 2"></button>
+        <button data-slide="2" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 3"></button>
+      </div>
     </div>
   </section>
 
-  <!-- ▸ CONTACT CTA ------------------------------------------------------------------- -->
+  <!-- CONTACT CTA -->
   <section id="contact"
            class="relative py-24 text-center bg-cover bg-center"
            style="background-image:url('contact_background.webp');">
-    <!-- black overlay (40 % opacity) -->
     <div class="absolute inset-0 bg-black opacity-40" aria-hidden="true"></div>
-
     <div class="relative z-10">
       <h2 class="mb-6 text-3xl font-semibold md:text-4xl">Ready to Elevate Your Brand?</h2>
       <p class="max-w-2xl mx-auto mb-10 text-gray-300">
         Let’s craft visual stories and data‑powered campaigns that move your audience—and your bottom line.
       </p>
-
-      <!-- Calendly trigger in contact section -->
-      <a href="#" class="book-call px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">
+      <a href="#"
+         class="book-call px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">
         Book&nbsp;a&nbsp;Call
       </a>
     </div>
   </section>
 
-  <!-- FOOTER with Social Links -->
+  <!-- FOOTER -->
   <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">
     <div class="flex justify-center gap-4 mb-2">
       <a href="https://linkedin.com/in/jakabbenedek2002" target="_blank" class="hover:text-white">LinkedIn</a>
-      <a href="https://www.instagram.com/benedekjakab/" target="_blank" class="hover:text-white">Instagram</a>
+      <a href="https://instagram.com/your_instagram" target="_blank" class="hover:text-white">Instagram</a>
     </div>
     © 2025 CrimsonLens. All rights reserved.
   </footer>
 
-  <!-- ▸ CAROUSEL SCRIPT --------------------------------------------------------------- -->
+  <!-- CAROUSEL SCRIPT -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const carousel = document.getElementById('carousel');
-      const dots     = document.querySelectorAll('.dot');
-      let current    = 0;
-      const total    = carousel.children.length;
+      const dots = document.querySelectorAll('.dot');
+      let currentSlide = 0;
+      const totalSlides = carousel.children.length;
 
-      function updateDots(i) {
-        dots.forEach((d, idx) => {
-          d.classList.toggle('bg-[var(--burgundy)]', idx === i);
-          d.classList.toggle('bg-gray-500',         idx !== i);
+      function updateDots(idx) {
+        dots.forEach((dot, i) => {
+          dot.classList.toggle('bg-[var(--burgundy)]', i === idx);
+          dot.classList.toggle('bg-gray-500', i !== idx);
         });
       }
-      function go(i) {
-        current = (i + total) % total;
-        carousel.style.transform = `translateX(-${current * 100}%)`;
-        updateDots(current);
+
+      function goToSlide(idx) {
+        currentSlide = (idx + totalSlides) % totalSlides;
+        carousel.style.transform = `translateX(-${currentSlide * 100}%)`;
+        updateDots(currentSlide);
       }
-      dots.forEach((d, i) => d.addEventListener('click', () => go(i)));
-      setInterval(() => go(current + 1), 6000);  // auto-play every 6 s
+
+      dots.forEach((dot, i) => dot.addEventListener('click', () => goToSlide(i)));
+      setInterval(() => goToSlide(currentSlide + 1), 6000);
     });
   </script>
 
- <!-- ▸ CALENDLY POPUP (now loads synchronously) --------------------------- -->
-  <script src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <!-- CALENDLY POPUP SCRIPT -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
   <script>
-    // attach popup to every .book-call link
     document.querySelectorAll('.book-call').forEach(btn => {
       btn.addEventListener('click', e => {
         e.preventDefault();
@@ -229,5 +188,7 @@
       });
     });
   </script>
+
 </body>
 </html>
+```
